update / sidebar slide-in transition simplified the transition for when the sidebar gets hover-overed. The reason behind it is that moving the whole content along with the sidebar, even using the css transform property, the transition is quite expensive for the browser to handle it correctly, leading to un-sincronized animations for both the sidebar and the content, not to mention that if we apply the transform prop to an element, every single of its children will be re-positioned as something different than what the may be.

--- a/public/css/components/sidebar.less
+++ b/public/css/components/sidebar.less
@@ -49,11 +49,11 @@ body.page-inner > .cv-main-sidebar {
   left: -(@cv-sidebar-width - @cv-sidebar-collapsed-width);
   overflow: hidden;
   background-color: @color-neutral-xxx-dark;
-  transition: transform 400ms ease-in-out;
+  transition: transform 300ms ease-in-out;
 
   .sidebar-nav {
     transform: translateX(@cv-sidebar-width - @cv-sidebar-collapsed-width);
-    transition: transform 400ms ease-in-out;
+    transition: transform 300ms ease-in-out;
   }
 
   .cv-main-logo-type,
